--- a/Fallout D10/Fallout d10.html
+++ b/Fallout D10/Fallout d10.html
@@ -8,7 +8,7 @@
 <div class="sheet-tab-br"></div>
 
 <div class="sheet-tab-content sheet-tab1">
-    <table class="sheet-bio">
+    <div class="sheet-bio">
         <tr>
             <td><input type="text" class="sheet-text_left" name="attr_titlecharacter_name" value="Character Name" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_character_name"  /></td>
             <td><input type="text" class="sheet-text_left" name="attr_titlecharacter_height" value="Height" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_character_height"  /></td>
@@ -25,12 +25,12 @@
             <td><input type="text" class="sheet-text_left" name="attr_titlecharacter_race" value="Race" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_character_race"  /></td>
             <td><input type="text" class="sheet-text_left" name="attr_titlecharacter_hair" value="Hair" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_character_hair"  /></td>
         </tr>
-    </table>
+    </div>
     <input type="text" class="sheet-text_center" name="attr_title_character_appearance" value="Appearance" style="width:98%" readonly />
     <textarea name="attr_appearance" style="width:97%" ></textarea>
     <br>
     <h3 style="width:98%">Attributes</h3>
-    <table class="sheet-center">
+    <div class="sheet-center">
         <tr>
             <td>S.P.E.C.I.A.L.</td>
             <td>Total</td>
@@ -88,8 +88,9 @@
             <td><input type="number" class="sheet-number" name="attr_luck_racial_max" value="" /></td>
         </tr>
         <br>
+    </div>
         <h3 style="width:98%">Traits</h3>
-    <table class="sheet-center">
+    <div class="sheet-center">
         <tr>
             <td><input type="text" class="sheet-text_left" name="attr_titletrait_name" value="Trait Name" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_trait_name"  /></td>
             <textarea name="attr_trait_name" style="width:97%" ></textarea>
@@ -99,9 +100,9 @@
             <textarea name="attr_trait_name" style="width:97%" ></textarea>
         </tr>
         <br>
-    </table>
+    </div>
     <h3 style="width:98%">Secondary Statistics</h3>
-    <table class="sheet-center">
+    <div class="sheet-center">
         <tr>
             <td>Statistic</td>
             <td>Total</td>
@@ -185,10 +186,10 @@
             <td><input type="number" class="sheet-number" name="attr_base-sprint_increase" value='(@{endurance})' disabled="true" /></td>
             <td><input type="text"   class="sheet-number" name="attr_basetext-sprint_increase" value="(EN; with per hit gain +1 hex movement)" readonly /></td>
         </tr>
-    </table>
+    </div>
     <br>
     <h3 style="width:98%">Experience</h3>
-    <table class="sheet-center">
+    <div class="sheet-center">
         <tr>
             <td>Experience Points</td>
             <td><input type="number" class="sheet-number" name="attr_experience" value="0" style="width:100px"  /></td>
@@ -201,7 +202,7 @@
             <td>Karma Title</td>
             <td><input type="text" class="sheet-text_left" name="attr_titlekarma_title" value="Karma Title" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_karma_title"  /></td>
         </tr>
-    </table>
+    </div>
     <tr>
         <td><input type="text" class="sheet-text_left" name="attr_titlenote" value="Notes" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_note"  /></td>
         <textarea name="attr_note" style="width:97%" ></textarea>
@@ -210,7 +211,7 @@
 
 <div class="sheet-tab-content sheet-tab2">
     <h3 style="width:98%">Skills</h3>
-    <table class="sheet-center">
+    <div class="sheet-center">
         <tr>
             <td>Skill</td>
             <td>Total</td>
@@ -706,14 +707,14 @@
             <td><input type="text" class="sheet-number" name="attr_basetext-weaponsmith" value="Yes" readonly style="width:50px" /></td>
             <td><input type="text" class="sheet-number" name="attr_weaponsmith" value="" style="width:35%" /></td>
         </tr>
-    </table>
+    </div>
 </div>
 
 <div class="sheet-tab-content sheet-tab3">
     <div class='sheet-2colrow'>
         <div class='sheet-col'>
         <h3 style="width:98%">Armor</h3>
-            <table class="sheet-center">
+            <div class="sheet-center">
                 <tr>
                     <td><input type="text" class="sheet-text_left" name="attr_titlearmor_name" value="Armor Name" readonly />&nbsp;<input type="text" class="sheet-text_right" name="attr_armor_name"  /></td>
                 </tr>
@@ -743,12 +744,12 @@
                 <tr>
                     <td colspan="7"><textarea style="width:96%" name="attr_special_bonuses" placeholder="Special Bonuses"></textarea></td>
                 </tr>
-            </table>
+            </div>
         </div>
         <br>
         <div class='sheet-col'>
         <h3 style="width:98%">Health</h3>
-            <table class="sheet-center">
+            <div class="sheet-center">
                 <tr>
                     <td>Current Health</td>
                     <td><input type="number" class="sheet-number" name="attr_current_health" value="0" style="width:80px"  /></td>
@@ -771,14 +772,14 @@
                 <tr>
                     <td colspan="5"><textarea style="width:96%" name="attr_wounds_note" placeholder="Wounds Note"></textarea></td>
                 </tr>
-            </table>
+            </div>
         </div>
     </div>
     <br>
     <h3 style="width:98%">Weapons</h3>
     <div class='sheet-2colrow'>
         <div class='sheet-col'>
-            <table>
+            <div class="sheet-center">
                 <tr>
                     <td>Weapon Name & Type</td>
                     <td><input type="number" class="sheet-number" name="attr_weapon_name" value="" style="width:96%"  /></td>
@@ -808,7 +809,7 @@
                     <td><input type="number" class="sheet-number" name="attr_ammo_quantity" value="" style="width:100px"  /></td>
                 </tr>
                 <h4 style="width:50%">Range</h4>
-                <table class="sheet-center">
+                <div class="sheet-center">
                     <tr>
                         <td>Short (0)</td>
                         <td><input type="number" class="sheet-number" name="attr_short" value="0" style="width:120px"  /></td>
@@ -821,10 +822,10 @@
                         <td>Extreme (-6)</td>
                         <td><input type="number" class="sheet-number" name="attr_extreme" value="0" style="width:120px"  /></td>
                     </tr>    
-                </table>
-            </table>
+                </div>
+            </div>
             <br>
-            <table>
+            <div class="sheet-center">
                 <tr>
                     <td>Weapon Name & Type</td>
                     <td><input type="number" class="sheet-number" name="attr_weapon_name" value="" style="width:96%"  /></td>
@@ -854,7 +855,7 @@
                     <td><input type="number" class="sheet-number" name="attr_ammo_quantity" value="" style="width:100px"  /></td>
                 </tr>
                 <h4 style="width:50%">Range</h4>
-                <table class="sheet-center">
+                <div class="sheet-center">
                     <tr>
                         <td>Short (0)</td>
                         <td><input type="number" class="sheet-number" name="attr_short" value="0" style="width:120px"  /></td>
@@ -867,10 +868,10 @@
                         <td>Extreme (-6)</td>
                         <td><input type="number" class="sheet-number" name="attr_extreme" value="0" style="width:120px"  /></td>
                     </tr>    
-                </table>
-            </table>
+                </div>
+            </div>
             <br>
-            <table>
+            <div class="sheet-center">
                 <tr>
                     <td>Weapon Name & Type</td>
                     <td><input type="number" class="sheet-number" name="attr_weapon_name" value="" style="width:96%"  /></td>
@@ -900,7 +901,7 @@
                     <td><input type="number" class="sheet-number" name="attr_ammo_quantity" value="" style="width:100px"  /></td>
                 </tr>
                 <h4 style="width:50%">Range</h4>
-                <table class="sheet-center">
+                <div class="sheet-center">
                     <tr>
                         <td>Short (0)</td>
                         <td><input type="number" class="sheet-number" name="attr_short" value="0" style="width:120px"  /></td>
@@ -913,8 +914,8 @@
                         <td>Extreme (-6)</td>
                         <td><input type="number" class="sheet-number" name="attr_extreme" value="0" style="width:120px"  /></td>
                     </tr>    
-                </table>
-            </table>
+                </div>
+            </div>
         </div>
     </div>
 </div>
@@ -936,7 +937,7 @@
 
 <div class="sheet-tab-content sheet-tab5">
     <h3 style="width:98%">Implants</h3>
-    <table class="sheet-center">
+    <div class="sheet-center">
         <tr>
             <td>Implant Endurance (IE)</td>
             <td><input type="number" class="sheet-number" name="attr_ie" value="0" style="width:80px"  /></td>
@@ -1015,10 +1016,10 @@
         <tr>
             <td colspan="6"><textarea name="attr_implant_text" style="width:97%" ></textarea></td>
         </tr>
-    </table>
+    </div>
     <br>
     <h3 style="width:98%">Inventory</h3>
-    <table class="sheet-center">
+    <div class="sheet-center">
         <tr>
             <td>Caps</td>
             <td><input type="number" class="sheet-number" name="attr_caps" value="0" style="width:40%"  /></td>
@@ -1038,10 +1039,10 @@
         <tr>
             <td colspan="6"><textarea name="attr_item_text" style="width:97%" ></textarea></td>
         </tr>
-    </table>
+    </div>
         <br>
     <fieldset class="repeating_traits">
-        <table class="sheet-center">
+        <div class="sheet-center">
             <tr>
                 <td>Item Name</td>
                 <td><input type="text" class="sheet-number" name="attr_item_name" /></td>
@@ -1053,7 +1054,6 @@
             <tr>
                 <td colspan="6"><textarea name="attr_item_text" style="width:97%" ></textarea></td>
             </tr>
-        </table>
-        <br>
+        </div>
     </fieldset>
 </div>
