--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -20,7 +20,7 @@
 	        <div class="content">
 	            <h4>GURPS Version <input type="text" name="attr_announcement_version" readonly="readonly" value="0" title="GURPS Sheet Version" /></h4>
 	            <ul>
-	                <li>Rolltable update: Move "Ref" to the right of roll type to save space. Suggested by Mike W.</li>
+	                <li>Roll template update: Move "Ref" to the right of roll type to save space. Suggested by Mike W.</li>
 	                <li>Grimoire tab: Added checkbox to highlight spells. Added a spell level modifier column. Suggested by Mike W.</li>
 	                <li>
 	                    Fallling/Collision notes: Revised the default notes when the falling damage is rolled. 
@@ -3631,7 +3631,7 @@
 	<h4>Version 1.6.0</h4>
 	
 	<ul>
-	    <li>Rolltable update: Move "Ref" to the right of roll type to save space. Suggested by Mike W.</li>
+	    <li>Roll template update: Move "Ref" to the right of roll type to save space. Suggested by Mike W.</li>
 	    <li>Grimoire tab: Added checkbox to highlight spells. Added a spell level modifier column.</li>
 	    <li>
             Fallling/Collision notes: Revised the default notes when the falling damage is rolled. 
