[L5R 5th Edition Unofficial] - Version 0.3 (#5209)
* Version 0.2
--------------
Added new section "20 questions"
Added a generate character button in 20 questions, not using charmancer (Charmancer not as suited as it sounds). Sheet-workers fill relevant parts of the sheet.
Added a NPC switch with extra funcitonality
All images from version 0.1 is now loaded from repository instead of private ftp
Added 5 new images, these are loaded from private ftp, schedule for next release

Advantages and Disadvantages
Added exta fields

Skills
Made stances clickable to print out in chat.
Added Approch choice and sheet-workers to handle the functionality, new change in how to roll skills is to make better rolltemplate

School
Added school ability field

Techniques
Added Technique types

Equipment
Added wealth fields
Redesign of Weapon field and added roll-button to each row
Splitted Equipment, relationships and notes fields into three fields. Sheet workers don't need to move any data as the combined field had appropirate name for the single field of equipment

Overall
Clean up some layout and styling
Clean up some unused sheet worker code
Update picture to reflect new shee

* Small update to NPC-sheet to only show demeanor-adjustment-boxes when choosing "Custom demeanor" in the "Choose demeanor field"

* Fixed bug where 20 questions section counted the ring field on question 2 twice.
Updated translations, added some fields and fixed a bug
Added correct start values before you have modified the stats. Minor bug
Corrected rank 3 translation pointer in schools section
Added a way to minimize technique pages, added text on
All images links point towards roll20s github now.

* Update version number to 0.3

--- a/L5R 5th Edition Unofficial/L5R-5thEdition.html
+++ b/L5R 5th Edition Unofficial/L5R-5thEdition.html
@@ -3,7 +3,7 @@
 
 <div class="wrapper">
     <div class="row">
-        <div class="col" style="font-size:10px; width:60px;">Version 0.2</div> 
+        <div class="col" style="font-size:10px; width:60px;">Version 0.3</div> 
         <div class="col left-align-button-div">
             <button class="player-npc-button" type="action" name="act_npc_player">
                 <span class="player-text">Player</span>
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col">
                 <div class="row">
-                    <label class="point-label" ><input class="no-arrows" type="number" name="attr_endurance" min="0" max="100" value="0" readonly/>
+                    <label class="point-label" ><input class="no-arrows" type="number" name="attr_endurance" min="0" max="100" value="4" readonly/>
                     <span data-i18n="endurance-u">Endurance</span> </label>
                 </div>
                 <div class="row">
@@ -100,7 +100,7 @@
             </div>
             <div class="col">
                 <div class="row">
-                    <label class="point-label" ><input class="no-arrows" type="number" name="attr_composure" min="0" max="100" value="0" readonly/>
+                    <label class="point-label" ><input class="no-arrows" type="number" name="attr_composure" min="0" max="100" value="4" readonly/>
                     <span data-i18n="composure-u">Composure</span> </label>
                 </div>
                 <div class="row">
@@ -110,11 +110,11 @@
             </div>
             <div class="col">
                 <div class="row">
-                    <label class="point-label" ><input class="no-arrows" type="number" name="attr_focus" min="0" max="100" value="0" readonly/>
+                    <label class="point-label" ><input class="no-arrows" type="number" name="attr_focus" min="0" max="100" value="2" readonly/>
                     <span data-i18n="focus-u">Focus</span> </label>
                 </div>
                 <div class="row">
-                    <label class="point-label"><input class="no-arrows" type="number" name="attr_vigilance" min="0" max="100" value="0" readonly/>
+                    <label class="point-label"><input class="no-arrows" type="number" name="attr_vigilance" min="0" max="100" value="1" readonly/>
                     <span data-i18n="vigilance-u">Vigilance</span> </label>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                         <span data-i18n="current-u">Current</span>
                     </div>
                     <div class="col" style="width:50px">
-                        <input class="no-arrows" type="number" name="attr_max_void_points" min="0" max="100" value="0" readonly/>
+                        <input class="no-arrows" type="number" name="attr_max_void_points" min="0" max="100" value="1" readonly/>
                         <span data-i18n="max-u">Max</span>
                     </div>
                 </div>
@@ -1223,7 +1223,7 @@
                             <div class="col div-rank-field-spent simple-gray-border no-top-border"><input class="input-rank-field-spent no-arrows" type="number" name="attr_rank_3_field7_spent" value="0" min="0"></div>
                         </div>
                         <div>
-                            <div class="col div-rank-field-name div-school-gray simple-gray-border no-right-border no-top-border div-school-exp-text"><span data-i18n="exp-spent-rank-1-u">EXP Spent on Rank 3 Teachings</span></div>
+                            <div class="col div-rank-field-name div-school-gray simple-gray-border no-right-border no-top-border div-school-exp-text"><span data-i18n="exp-spent-rank-3-u">EXP Spent on Rank 3 Teachings</span></div>
                             <div class="col div-rank-field-spent simple-gray-border no-top-border"><input class="input-rank-field-spent no-arrows" type="number" name="attr_rank_3_field8_spent" value="0"></div>
                         </div>
                         <div>
@@ -1231,7 +1231,7 @@
                             <div class="col div-rank-field-spent simple-gray-border no-top-border"><input class="input-rank-field-spent no-arrows" type="number" name="attr_rank_3_field9_spent" value="0" min="0"></div>
                         </div>
                         <div>
-                            <div class="col div-rank-field-name div-school-gray simple-gray-border no-right-border no-top-border div-school-exp-text bold-text"><span data-i18n="total-exp-spent-rank-1-u">Total EXP Spent at Rank 3 (32)</span></div>
+                            <div class="col div-rank-field-name div-school-gray simple-gray-border no-right-border no-top-border div-school-exp-text bold-text"><span data-i18n="total-exp-spent-rank-3-u">Total EXP Spent at Rank 3 (32)</span></div>
                             <div class="col div-rank-field-spent simple-gray-border no-top-border"><input class="input-rank-field-spent no-arrows" type="number" name="attr_rank_3_field10_spent" value="0"></div>
                         </div>
                     </div>
@@ -1497,6 +1497,7 @@
             <div class="row">
                 <div class="col techniques-col" style="border:0px solid black; border-right-width:1px; padding-right:8px;">
                     <fieldset class="repeating_techniquesactions" style="position: relative; top: -1px;">
+                        <input class="techniques-flag" type="checkbox" name="attr_technique_flag" checked="checked"><span>E</span></input>
                         <div class="techniques-table">
                             <div class="full-width" style="line-height: 26px">
                                 <div class="col" style="width: 10%">
@@ -1511,10 +1512,10 @@
                                 <div class="col" style="width: 21%">
                                     <input class="techniques-input-fields full-width" type="text" name="attr_technique_type" min="0">
                                 </div> 
-                                <div class="col" style="width: 13%">
-                                    <span class="bold-text" data-i18n="page-number-u">Page #:</span>
+                                <div class="col" style="width: 10%">
+                                    <span class="bold-text" data-i18n="page-number-u">Page:</span>
                                 </div>
-                                <div class="col"style="width: 10%">
+                                <div class="col"style="width: 9%">
                                     <input class="techniques-input-fields full-width text-center-aligned no-arrows" type="number" name="attr_technique_page_number" min="0">
                                 </div> 
                             </div>
@@ -1540,10 +1541,30 @@
                                 <div class="technique-roll"><button class="technique-roll-button" type="roll" value="&{template:l5r5th} {{sub-title=^{action-parentheses-u}}} {{name=@{technique_name}}} {{type=@{technique_type}}} {{check=@{activation_field}}} {{page=@{technique_page_number}}} {{effects=@{effects_box}}} {{opportunities=@{new_opportunity_box}}}"><span class="print-technique" data-i18n="print-technique-u">Print technique in chat</span></button></div>      
                             </div>
                         </div>
+                        <div class="techniques-short">
+                            <div class="full-width" style="line-height: 26px">
+                                <div class="col" style="width: 10%">
+                                    <span class="bold-text" data-i18n="name:-u">Name:</span>
+                                </div>
+                                <div class="col" style="width: 35%">
+                                    <input class="techniques-input-fields full-width" type="text" name="attr_technique_name">
+                                </div>
+                                <div class="col" style="width: 10%">
+                                    <span class="bold-text" data-i18n="type:-u">Type:</span>
+                                </div>
+                                <div class="col" style="width: 21%">
+                                    <input class="techniques-input-fields full-width" type="text" name="attr_technique_type" min="0">
+                                </div>
+                                <div class="col" style="margin-bottom: 2px; margin-top: 1px; width:15%;">    
+                                    <div class="technique-roll"><button class="technique-roll-button" type="roll" value="&{template:l5r5th} {{sub-title=^{action-parentheses-u}}} {{name=@{technique_name}}} {{type=@{technique_type}}} {{check=@{activation_field}}} {{page=@{technique_page_number}}} {{effects=@{effects_box}}} {{opportunities=@{new_opportunity_box}}}"><span class="print-technique" data-i18n="print-u">Print</span></button></div>      
+                                </div>
+                            </div>
+                        </div>
                     </fieldset>
                 </div>
                 <div class="col techniques-col" style="margin-left: 0px;">
                     <fieldset class="repeating_techniquesopportunities" style="position: relative; top: -1px;">
+                        <input class="techniques-flag" type="checkbox" name="attr_technique_flag" checked="checked"><span>E</span></input>
                         <div class="techniques-table">
                             <div class="full-width" style="line-height: 26px">
                                 <div class="col" style="width: 10%">
@@ -1558,10 +1579,10 @@
                                 <div class="col" style="width: 21%">
                                     <input class="techniques-input-fields full-width" type="text" name="attr_technique_new_op_type" min="0">
                                 </div> 
-                                <div class="col" style="width: 13%">
-                                    <span class="bold-text" data-i18n="page-number-u">Page #:</span>
+                                <div class="col" style="width: 10%">
+                                    <span class="bold-text" data-i18n="page-number-u">Page:</span>
                                 </div>
-                                <div class="col"style="width: 10%">
+                                <div class="col"style="width: 9%">
                                     <input class="techniques-input-fields full-width text-center-aligned no-arrows" type="number" name="attr_technique_page_new_op_number" min="0">
                                 </div> 
                             </div>
@@ -1579,6 +1600,25 @@
                             </div>
                             <div style="margin-bottom: 5px; margin-right: 1px">    
                                 <div class="technique-roll"><button class="technique-roll-button" type="roll" value="&{template:l5r5th} {{sub-title=^{opportunity-parentheses-u}}} {{name=@{technique_new_op_name}}} {{type=@{technique_new_op_type}}} {{check2=@{check_field}}} {{page=@{technique_page_new_op_number}}} {{opportunities=@{new_opportunity_2_box}}}"><span class="print-technique" data-i18n="print-technique-u">Print technique in chat</span></button></div>      
+                            </div>
+                        </div>
+                        <div class="techniques-short">
+                            <div class="full-width" style="line-height: 26px">
+                                <div class="col" style="width: 10%">
+                                    <span class="bold-text" data-i18n="name:-u">Name:</span>
+                                </div>
+                                <div class="col" style="width: 35%">
+                                    <input class="techniques-input-fields full-width" type="text" name="attr_technique_new_op_name">
+                                </div>
+                                <div class="col" style="width: 10%">
+                                    <span class="bold-text" data-i18n="type:-u">Type:</span>
+                                </div>
+                                <div class="col" style="width: 21%">
+                                    <input class="techniques-input-fields full-width" type="text" name="attr_technique_new_op_type" min="0">
+                                </div>
+                                <div class="col" style="margin-bottom: 2px; margin-top: 1px; width:15%;">    
+                                    <div class="technique-roll"><button class="technique-roll-button" type="roll" value="&{template:l5r5th} {{sub-title=^{opportunity-parentheses-u}}} {{name=@{technique_new_op_name}}} {{type=@{technique_new_op_type}}} {{check2=@{check_field}}} {{page=@{technique_page_new_op_number}}} {{opportunities=@{new_opportunity_2_box}}}"><span class="print-technique" data-i18n="print-u">Print</span></button></div>      
+                                </div>
                             </div>
                         </div>
                     </fieldset>
@@ -3595,27 +3635,27 @@
             </h2> 
             {{/rollTotal() a-id 0}} 
             {{#rollTotal() a-id 1}}  
-            <h2 class="description-title stance-description-background" style="background-image: url(http://http://www.suanho.com/sheet-assets/Air-color-transp.png);">
+            <h2 class="description-title stance-description-background" style="background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/L5R%205th%20Edition%20Unofficial/images/Air-color-transp.png);">
                 {{stance-description}}
             </h2> 
             {{/rollTotal() a-id 1}} 
             {{#rollTotal() a-id 2}} 
-            <h2 class="description-title stance-description-background" style="background-image: url(http://http://www.suanho.com/sheet-assets/Earth-color-transp.png);">
+            <h2 class="description-title stance-description-background" style="background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/L5R%205th%20Edition%20Unofficial/images/Earth-color-transp.png);">
                 {{stance-description}}
             </h2> 
             {{/rollTotal() a-id 2}} 
             {{#rollTotal() a-id 3}}
-            <h2 class="description-title stance-description-background" style="background-image: url(http://http://www.suanho.com/sheet-assets/Fire-color-transp.png);">
+            <h2 class="description-title stance-description-background" style="background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/L5R%205th%20Edition%20Unofficial/images/Fire-color-transp.png);">
                 {{stance-description}}
             </h2> 
             {{/rollTotal() a-id 3}} 
             {{#rollTotal() a-id 4}}
-            <h2 class="description-title stance-description-background" style="background-image: url(http://http://www.suanho.com/sheet-assets/Water-color-transp.png);">
+            <h2 class="description-title stance-description-background" style="background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/L5R%205th%20Edition%20Unofficial/images/Water-color-transp.png);">
                 {{stance-description}}
             </h2>  
             {{/rollTotal() a-id 4}} 
             {{#rollTotal() a-id 5}}
-            <h2 class="description-title stance-description-background" style="background-image: url(http://http://www.suanho.com/sheet-assets/Void-color-transp.png);">
+            <h2 class="description-title stance-description-background" style="background-image: url(https://raw.githubusercontent.com/Roll20/roll20-character-sheets/master/L5R%205th%20Edition%20Unofficial/images/Void-color-transp.png);">
                 {{stance-description}}
             </h2> 
             {{/rollTotal() a-id 5}}
@@ -4054,7 +4094,7 @@
         setAttrs({ air: 1, earth: 1, fire: 1, water: 1, void : 1 });
 
         getAttrs(["20_qs_question_1_ring", "20_qs_question_2_ring", "20_qs_question_3_ring_1", "20_qs_question_3_ring_2", "20_qs_question_4_ring"], function(v) {
-            var values = [ v["20_qs_question_1_ring"], v["20_qs_question_2_ring"], v["20_qs_question_2_ring"], v["20_qs_question_3_ring_1"], v["20_qs_question_3_ring_2"], v["20_qs_question_4_ring"] ];
+            var values = [ v["20_qs_question_1_ring"], v["20_qs_question_2_ring"], v["20_qs_question_3_ring_1"], v["20_qs_question_3_ring_2"], v["20_qs_question_4_ring"] ];
 
             var air_val = 1;
             var earth_val = 1;
